[project]
name = "mnist"
version = "0.0.1"
authors = [
  { name="Anoban", email="anoban97atgmaildotcom" },
]

description = "a cocktail of neural networks for classifying MNIST style images"
readme = "README.md"
requires-python = ">=3.13"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "MIT"
